test/error/error.input124.zc
Cannot ++ on rvalue:ary on line 6
